hpav2/sample-metrics/sample-metrics-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sample-metrics-app
  name: sample-metrics-app
  namespace: default
spec:
  ports:
  - port: 80
    name: web
    protocol: TCP
    targetPort: 8080
  selector:
    app: sample-metrics-app
