hpav2/sample-metrics/sample-metrics-app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sample-metrics-app
spec:
  rules:
    - host: sample-metrics-app.huisebug.com
      http:
        paths:
          - backend:
              serviceName: sample-metrics-app
              servicePort: 80
            path: /
